Yevgeniy-Brikman-terraform/Chapter2-ASG-ALB-EXAMPLE/secruitygroups.tf
resource "aws_security_group" "web_ssh_allow" {

  name        = "web_ssh"
  description = "Allow web and ssh traffic to external"
  vpc_id      = module.vpc.vpc_id

  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 80
    protocol    = "tcp"
    to_port     = 80
  }

  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 22
    protocol    = "tcp"
    to_port     = 22
  }

  egress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
  }
}
